Downgraded MaxMind, Mockito libraries to keep it compatible with Java 8